# VEER-Variogram-Expected-Error-Reduction-for-adaptive-microscopy

./: .gitignore  README.md  pyproject.toml
configs/: alloy617_v4_bayesian_additive.yaml  alloy617_v4_bayesian_pareto.yaml  alloy617_v4_uncertainty.yaml  alloy617_v5_veer.yaml  alloy617_veer.yaml
data/alloy617_nrds/: README.md  download_incidents.yaml  download_manifest.csv  full_stack_binary_layout_audit.csv  full_stack_download_manifest.csv  full_stack_download_plan.csv  validation_download_manifest.csv  validation_slices_selection.yaml
docs/: DESIGN.md
notebooks/: inspect_run.ipynb
results/alloy617_v5_veer_confirm_full_stack/: v5_veer_final_metrics_by_slice.csv  v5_veer_fold_protocol.yaml  v5_veer_trailing_summary.csv
results/alloy617_v5_veer_gate_030/: v5_veer_fold_protocol.yaml  v5_veer_trailing_summary.csv
results/alloy617_v5_veer_smoke_010/: v5_veer_oof_summary.csv  v5_veer_trailing_summary.csv
results/alloy617_veer_confirm_full_stack/: veer_oof_summary.csv
results/alloy617_veer_gate_030/: veer_final_metrics_by_slice.csv  veer_oof_summary.csv
scripts/: download_nrds_alloy617_eds_stack.py  render_acquisition_gif.py
src/balance_nm/: __init__.py  acquisition.py  cli.py  data.py  domain.py  evaluation.py  experiment.py  features.py  io.py  models.py  patterns.py  quality.py  replay.py  roi_search.py  simulation.py  stack_validation.py  v3_graph.py  v3_morphology.py  v3_validation.py  v4_bayesian.py  v4_bayesian_additive_validation.py  v4_bayesian_morphology.py  v4_bayesian_morphology_validation.py  v4_bayesian_pareto.py  v4_neural.py  (+8 more)
tests/: conftest.py  test_v4_bayesian_pareto.py  test_v4_uncertainty.py  test_v5_veer.py  test_veer.py
(+12 files in other folders)
