[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balance-nm"
version = "0.2.0"
description = "Multi-objective Bayesian active learning for adaptive SEM-EDS elemental imaging."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.10",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "Pillow>=10.0",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "tabulate>=0.9",
  "typer>=0.12",
  "xarray>=2024.1",
  "zarr>=2.17,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
learned = ["torch>=2.3"]

[project.scripts]
balance-nm = "balance_nm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
