[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "balance-nm"
version = "0.3.0"
description = "Variogram expected-error-reduction (VEER) adaptive raster selection for SEM-EDS corrosion-morphology replay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "h5py>=3.10",
  "numpy>=1.26",
  "pandas>=2.1",
  "Pillow>=10.0",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "typer>=0.12",
  "xarray>=2024.1",
  "zarr>=2.17,<3",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
balance-nm = "balance_nm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
